--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <!--Site İsmi(Başlığı)--> 
 <title>Arda Özhan</title>
 </head>
 <body>
+    <!--Ana Başlık--> 
     <h1>Arda Özhan</h1>
+    <!--Alt Başlık--> 
     <h2>Hakkımda</h2>
+    <!-- İçerik --> 
     <p>Merhabalar, Ben Arda Özhan 19 yaşndayım 2022 haziran ayında Beykoz Üniversitesi Bilgisayar programcılığı bölümünden mezun oldum. Şuan iş aramaktayım aynı zamanda 
         kendimi geliştirmek adına sertifika programlarına katılım kendimi geliştirmekteyim.
     </p>
+    <!--2. Alt Başlık--> 
     <h2>Hobilerim </h2>
+    <!-- İçerik --> 
     <p>balık tutmak, kamp yapmak ve kitap okumaktır. </p>
 </body>
 </html>
