--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <h2>Hobilerim </h2>
     <!-- İçerik --> 
     <p>balık tutmak, kamp yapmak ve kitap okumaktır. </p>
+    <!-- Patika Linkim --> 
+    <h2>Patika Hesabım</h2>
+        <a href="https://app.patika.dev/ardaozhan">Patika Hesabım</a>
 </body>
 </html>
